2005-03-28  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* gtk/gtkfilechooserdefault.c: (update_preview_widget_visibility): Make
	the preview label ellipsize so the dialog layout stays constant.
	(#171398)

2005-03-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_key_press): Don't pop up
	the context menu of the search entry if it is not visible.
	(#169534, Billy Biggs)

2005-03-27  Tor Lillqvist  <tml@novell.com>

	* configure.in: Apparently AC_LIBTOOL_WIN32_DLL isn't deprecated
	after all, and in fact necessary with HEAD libtool.

2005-03-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/*.c: 
	* gdk/gdkdisplaymanager.c: 
	Use canonical names for g_object_notify() as well. 

2005-03-24  Tor Lillqvist  <tml@novell.com>

	* configure.in (GTK_EXTRA_CFLAGS): Include the -mms-bitfields flag
	in GTK_EXTRA_CFLAGS on Win32, so that it gets included in the
	gtk+-2.0.pc file and automatically used by dependents. MSVC users
	who use pkg-config will have to manually edit it out from
	gtk+-2.0.pc, sorry. Maybe pkg-config should be enhanced to support
	some kind of conditionals in .pc files?

2005-03-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserbutton.c (update_combo_box): Remove
	a call whose result was unused and leaked.  (#170776,
	Kjartan Maraas)

	Some cleanups to the GtkDialog code:  (#170746, 
	Morten Welinder)
	* gtk/gtkdialog.c (action_widget_activated): Simplify,
	use _gtk_dialog_get_response_for_widget.
	(gtk_dialog_add_action_widget): Use the correct signal
	id for non-buttons.
	(gtk_dialog_set_response_sensitive): 
	(gtk_dialog_set_default_response): Use get_response_data.
	(gtk_dialog_run): Don't disconnect the signals if the
	dialog was destroyed while running.

Tue Mar 22 14:16:31 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkfilesystem.c (gtk_file_system_set_bookmark_label):
	Use g_return_if_fail, not g_return_val_if_fail.

2005-03-22  Matthias Clasen  <mclasen@redhat.com>
